Fix issue with preview not stretching full width of container in mobile view

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -265,8 +265,8 @@ nav ul {
 .summary {
 	color: #AAA;
 	font-size: 1.5em;
-	margin: 0 0 40px;
 	max-width: 800px;
+	padding: 0 0 40px;
 	width: 100%;
 }
 
@@ -375,6 +375,7 @@ nav ul {
 		float: none;
 		height: 300px;
 		shape-outside: unset;
+		width: 100%;
 		-webkit-clip-path: unset;
 	}
 
